# fake-iot

./: README.md  docker-compose.yml
backend/: .env  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/endpoints/: health.py  motor.py
backend/app/api/events/: __init__.py  motor_events.py
backend/app/core/: config.py  mqtt_manager.py  socketio_manager.py
backend/app/models/: motor.py
backend/app/schemas/: motor.py  websocket.py
frontend/: package-lock.json  package.json  tree.txt
frontend/public/models/: motor.fbx  scene.gltf
frontend/public/models/textures/: Scene_-_Root_metallicRoughness.png:Zone.Identifier
frontend/src/app/: page.tsx
frontend/src/app/(dashboard)/ControlPanel/: index.tsx
frontend/src/app/(dashboard)/StatsPanel/: index.tsx
frontend/src/app/(dashboard)/motor/: page.tsx
frontend/src/components/common/Header/: index.tsx
frontend/src/components/common/LoadingSpinner/: index.tsx
frontend/src/components/dashboard/ConnectionStatus/: index.tsx
frontend/src/components/dashboard/ControlPanel/: index.tsx
frontend/src/components/dashboard/StatsPanel/: index.tsx
frontend/src/components/three/FBXMotor/: index.tsx
frontend/src/components/three/GridFloor/: index.tsx
frontend/src/components/ui/: Slider.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/store/: motorStore.ts  useFBXMotorStore.ts
frontend/src/types/: websocket.ts
generate-fake-data/: data.csv  main.py  pyproject.toml
iot-service/: .env  Dockerfile  README.md  data.csv  main.py  pyproject.toml  requirements.txt
(+4 files in other folders)
